@@ -1,5 +1,5 @@
 # redmics - redmine ics export plugin
-# Copyright (c) 2012  Frank Schwarz, frank.schwarz@buschmais.com
+# Copyright (c) 2012 Frank Schwarz, frank.schwarz@buschmais.com
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
@@ -16,7 +16,8 @@
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 
 ActionController::Routing::Routes.draw do |map|
-  map.connect 'icalendar', :controller => 'i_calendar', :action => 'index'
+  map.connect 'icalendar/:project_id/:assignment/issues.:format', :controller => 'i_calendar', :action => 'index'
+  map.connect 'icalendar/:project_id/:assignment/:status/issues.:format', :controller => 'i_calendar', :action => 'index'
   map.connect 'my/redmics_settings', :controller => 'my', :action => 'redmics_settings'
   map.connect 'my/redmics_settings/reset', :controller => 'my', :action => 'redmics_settings_reset'
 end
